# gol

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: game_of_life.ipynb
notebooks/.ipynb_checkpoints/: game_of_life-checkpoint.ipynb
src/gol/: draw.py  game.py  streamlit_app.py  utils.py
src/gol/apps/: streamlit_anim.py  streamlit_app.py
src/gol/core/: game.py
src/streamlit/: streamlit_app.py
test/: test_game.py  test_utils.py
